content/contracts/v2.x/erc20-supply.mdx
---
title: Creating ERC20 Supply
description: Creating ERC20 Supply
---

In this guide you will learn how to create an ERC20 token with a custom supply mechanism. We will showcase two idiomatic ways to use OpenZeppelin Contracts for this purpose that you will be able to apply to your smart contract development practice.

The standard interface implemented by tokens built on Ethereum is called ERC20, and Contracts includes a widely used implementation of it: the aptly named [`ERC20`](contracts/v5.x/api/token/ERC20.mdx) contract. This contract, like the standard itself, is quite simple and bare-bones. In fact, if you try deploy an instance of `ERC20` as-is it will be quite literally useless... it will have no supply! What use is a token with no supply?

The way that supply is created is not defined in the ERC20 document. Every token is free to experiment with their own mechanisms, ranging from the most decentralized to the most centralized, from the most naive to the most researched, and more.

## Fixed Supply

Let’s say we want a token with a fixed supply of 1000, initially allocated to the account that deploys the contract. If you’ve used Contracts v1, you may have written code like the following:

```solidity
contract ERC20FixedSupply is ERC20 
    constructor() public {
        totalSupply += 1000;
        balances[msg.sender] += 1000;
    
}
```

Starting with Contracts v2 this pattern is not only discouraged, but disallowed. The variables `totalSupply` and `balances` are now private implementation details of `ERC20`, and you can’t directly write to them. Instead, there is an internal [`_mint`](contracts/v5.x/api/token/ERC20.mdx#ERC20-_mint-address-uint256-) function that will do exactly this:

```solidity
contract ERC20FixedSupply is ERC20 
    constructor() public {
        _mint(msg.sender, 1000);
    
}
```

Encapsulating state like this makes it safer to extend contracts. For instance, in the first example we had to manually keep the `totalSupply` in sync with the modified balances, which is easy to forget. In fact, we omitted something else that is also easily forgotten: the `Transfer` event that is required by the standard, and which is relied on by some clients. The second example does not have this bug, because the internal `_mint` function takes care of it.

## Rewarding Miners

The internal [`_mint`](contracts/v5.x/api/token/ERC20.mdx#ERC20-_mint-address-uint256-) function is the key building block that allows us to write ERC20 extensions that implement a supply mechanism.

The mechanism we will implement is a token reward for the miners that produce Ethereum blocks. In Solidity we can access the address of the current block’s miner in the global variable `block.coinbase`. We will mint a token reward to this address whenever someone calls the function `mintMinerReward()` on our token. The mechanism may sound silly, but you never know what kind of dynamic this might result in, and it’s worth analyzing and experimenting with!

```solidity
contract ERC20WithMinerReward is ERC20 
    function mintMinerReward() public {
        _mint(block.coinbase, 1000);
    
}
```

As we can see, `_mint` makes it super easy to do this correctly.

## Modularizing the Mechanism

There is one supply mechanism already included in Contracts: [`ERC20Mintable`](contracts/v5.x/api/token/ERC20.mdx#ERC20Mintable). This is a generic mechanism in which a set of accounts is assigned the `minter` role, granting them the permission to call a [`mint`](contracts/v5.x/api/token/ERC20.mdx#ERC20Mintable-mint-address-uint256-) function, an external version of `_mint`.

This can be used for centralized minting, where an externally owned account (i.e. someone with a pair of cryptographic keys) decides how much supply to create and to whom. There are very legitimate use cases for this mechanism, such as [traditional asset-backed stablecoins](https://medium.com/reserve-currency/why-another-stablecoin-866f774afede#3aea).

The accounts with the minter role don’t need to be externally owned, though, and can just as well be smart contracts that implement a trustless mechanism. We can in fact implement the same behavior as the previous section.

```solidity
contract MinerRewardMinter 
    ERC20Mintable _token;

    constructor(ERC20Mintable token) public {
        _token = token;
    

    function mintMinerReward() public 
        _token.mint(block.coinbase, 1000);
    
}
```

This contract, when initialized with an `ERC20Mintable` instance, will result in exactly the same behavior implemented in the previous section. What is interesting about using `ERC20Mintable` is that we can easily combine multiple supply mechanisms by assigning the role to multiple contracts, and moreover that we can do this dynamically.

## Automating the Reward

Additionally to `_mint`, `ERC20` provides other internal functions that can be used or extended, such as [`_transfer`](contracts/v5.x/api/token/ERC20.mdx#ERC20-_transfer-address-address-uint256-). This function implements token transfers and is used by `ERC20`, so it can be used to trigger functionality automatically. This is something that can’t be done with the `ERC20Mintable` approach.

Adding to our previous supply mechanism, we can use this to mint a miner reward for every token transfer that is included in the blockchain.

```solidity
contract ERC20WithAutoMinerReward is ERC20 
    function _mintMinerReward() internal {
        _mint(block.coinbase, 1000);
    

    function _transfer(address from, address to, uint256 value) internal 
        _mintMinerReward();
        super._transfer(from, to, value);
    
}
```

Note how we override `_transfer` to first mint the miner reward and then run the original implementation by calling `super._transfer`. This last step is very important to preserve the original semantics of ERC20 transfers.

## Wrapping Up

We’ve seen two ways to implement ERC20 supply mechanisms: internally through `_mint`, and externally through `ERC20Mintable`. Hopefully this has helped you understand how to use OpenZeppelin and some of the design principles behind it, and you can apply them to your own smart contracts.
